k8s/harbor/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: harbor
spec:
  type: ClusterIP
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: registry
